# daggerverse

./: .gitignore  .pre-commit-config.yaml  README.md
apko/: dagger.json  pyproject.toml
apko/src/apko/: __init__.py  build.py  cli.py  config.py  image.py  main.py  sbom.py
apko/src/main/: build.py  image.py  main.py
apko/tests/: test.sh
apko/tests/config/: apko.yaml
cosign/: dagger.json  pyproject.toml
cosign/src/cosign/: __init__.py  main.py
cosign/src/main/: main.py
crane/: dagger.json  pyproject.toml
crane/src/crane/: __init__.py  main.py
crane/src/main/: main.py
crane/tests/: test.sh
docker/: .gitignore  dagger.json
docker/src/main/: __init__.py  build.py  cli.py  image.py  main.py  sbom.py
docker/tests/: test.sh
docker/tests/files/: Dockerfile
grype/: dagger.json  pyproject.toml
grype/src/main/: __init__.py  main.py
grype/tests/: test.sh
helm/: dagger.json  pyproject.toml
helm/src/helm/: main.py
helm/src/main/: __init__.py  main.py
helm/tests/: tests.sh
helm/tests/helm/daggerverse/: Chart.yaml  values.yaml
helm/tests/helm/daggerverse/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/tests/helm/daggerverse/templates/tests/: test-connection.yaml
melange/: dagger.json  melange.rsa.pub  pyproject.toml
melange/src/melange/: __init__.py  main.py  signing_key.py
melange/tests/: test.sh
melange/tests/config/: melange.yaml
